# sdl-snake-game

./: CMakeLists.txt  README.md
include/: Common.h  Food.h  Game.h  NumberGenerator.h  Screen.h  Snake.h
source/: Food.cpp  Game.cpp  Main.cpp  NumberGenerator.cpp  Screen.cpp  Snake.cpp
